--- a/_config.yml
+++ b/_config.yml
@@ -14,36 +14,16 @@ theme_settings :
     description: "Speaker Recognition Blog"
 
     experience :
-      - start : 2018-01
-        end : 2018-08
-        experience : 기동어 발화 데이터를 이용한 화자 인식 기술 개발
+      - start : 2016-12
+        end : 2021-02
+        experience : IMPRESS(INTELLIGENT MULTIMEDIA PROCESSING LABORATORY) 연구원
     skills : 
-      - skill : MATLAB
-        value : 70
-      - skill : C/C++
-        value : 30
-      
-    experience :
-      - start : 2019-02
-        end : 2019-09
-        experience : 사용자 정의 기동어 인식 기술 개발
-    skills : 
-      - skill : python
-        value : 10
-      - skill : MATLAB
-        value : 20
-      - skill : C/C++
-        value : 70
-
-    experience :
-      - start : 2020-01
-        end : 2020-07
-        experience : 전화 녹취 음성에서 화자분리 및 음원분리 기술 구현 용역 개발
-    skills :
-      - skill : MATLAB
-        value : 10    
-      - skill : python
+      - skill : Python
         value : 90
+      - skill : MATLAB
+        value : 60
+      - skill : C/C++
+        value : 50
         
   # Icons
   icons :
