--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,12 +8,12 @@
     summary : 화자인식 파트 담당
     description : 기동어 발화 데이터를 이용한 화자 인식 기술 개발
     contents :
-        - title : Language
-          description : MATLAB, C/C++
+            title : Language
+            description : MATLAB, C/C++
 
 - project :
-    print : True 
-    modal : True 
+    print : True
+    modal : True
     url :
     image :
     date : 2019.02 - 2019.09
@@ -21,12 +21,12 @@
     summary : 화자인식 파트 담당
     description :  사용자 정의 기동어 인식 기술 개발
         contents :
-        - title : Language
-          description : Python, MATLAB, C/C++
+            title : Language
+            description : Python, MATLAB, C/C++
             
 - project :
     print : True
-    modal : True 
+    modal : True
     url :
     image :
     date : 2020.01 - 2020.07
@@ -34,13 +34,13 @@
     summary : 화자모델 구축 파트 담당
     description :  전화 녹취 음성에서 화자분리 및 음원분리 기술 구현 용역 개발
         contents :
-        - title : Language
-          description : Python, MATLAB
+            title : Language
+            description : Python, MATLAB
             
 
 - project :
     print : True
-    modal : True 
+    modal : True
     url : http://www.jask.or.kr/articles/xml/LPLB/
     image :
     date : 2019.02
@@ -62,7 +62,7 @@
 
 - project :
     print : True
-    modal : True 
+    modal : True
     url : http://www.jask.or.kr/articles/xml/BD7j/
     image :
     date : 2020.02
@@ -73,7 +73,7 @@
 
 - project :
     print : True
-    modal : True 
+    modal : True
     url :
     image :
     date : 2020.09
