--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,9 +7,9 @@
     title : 기업 프로젝트
     summary : 화자인식 파트 담당
     description : 기동어 발화 데이터를 이용한 화자 인식 기술 개발
-    contents :
-            title : Language
-            description : MATLAB, C/C++
+    contents : 
+        - title : Language
+          description : MATLAB, C/C++
 
 - project :
     print : True
@@ -20,9 +20,9 @@
     title : 기업 프로젝트
     summary : 화자인식 파트 담당
     description :  사용자 정의 기동어 인식 기술 개발
-    contents :
-            title : Language
-            description : Python, MATLAB, C/C++
+    contents : 
+        - title : Language
+          description : Python, MATLAB, C/C++
             
 - project :
     print : True
@@ -33,9 +33,9 @@
     title : 기업 프로젝트
     summary : 화자모델 구축 파트 담당
     description :  전화 녹취 음성에서 화자분리 및 음원분리 기술 구현 용역 개발
-    contents :
-            title : Language
-            description : Python, MATLAB
+    contents : 
+        - title : Language
+          description : Python, MATLAB
             
 
 - project :
