--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -35,7 +35,7 @@
     image :
     date : 2019.02
     title : 논문 [한국음향학회지] - 주저자
-    summary : 잡음 환경에 효과적인 음성인식을 위한 특징보상 이득 기반의 음성 향상 기법
+    description : 잡음 환경에 효과적인 음성인식을 위한 특징보상 이득 기반의 음성 향상 기법
 
 - project :
     print : False
@@ -44,7 +44,7 @@
     image :
     date : 2019.11
     title : 논문 [한국음향학회지] - 공동저자
-    summary : 심층신경망 구조에 따른 구개인두부전증 환자 음성 인식 향상 연구
+    description : 심층신경망 구조에 따른 구개인두부전증 환자 음성 인식 향상 연구
     
 
 - project :
@@ -54,7 +54,7 @@
     image :
     date : 2020.02
     title : 논문 [한국음향학회지] - 주저자
-    summary : Attention-long short term memory 기반의 화자 임베딩과 I-vector를 결합한 원거리 및 잡음 환경에서의 화자 검증 알고리즘
+    description : Attention-long short term memory 기반의 화자 임베딩과 I-vector를 결합한 원거리 및 잡음 환경에서의 화자 검증 알고리즘
     
 
 - project :
@@ -64,4 +64,4 @@
     image :
     date : 2020.09
     title : 논문 [한국음향학회지] - 주저자
-    summary : 화자 구분 시스템의 관심 화자 추출을 위한 i-vector 유사도 기반의 음성 분할 기법
+    description : 화자 구분 시스템의 관심 화자 추출을 위한 i-vector 유사도 기반의 음성 분할 기법
