--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,7 @@ theme_settings :
     instagram:
 
   # Disqus
-  disqus_shortname : arabae.github.io
-
+  disqus_shortname: arabae-github-io
 # Pagination
 paginate: 5
 paginate_path: "blog/page:num"
