--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "Just the Docs on GitHub":
+  "Ara's Github":
     - "//github.com/arabae/arabae.github.io"
 
 # Makes Aux links open in a new tab. Default is false
