--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "Ara's Github":
-    - "//github.com/arabae/arabae.github.io"
+    - "//github.com/arabae"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
