--- a/_config.yml
+++ b/_config.yml
@@ -92,6 +92,7 @@ ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (t
 
 plugins:
   - jekyll-seo-tag
+  - jemoji
 
 compress_html:
   clippings: all
