change point color

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: ARa's DevBlog
 author: ARa Bae
-url: https://arabae.github.io/arabae.github.io/
+url: https://arabae.github.io/
 baseurl: 
-resume_site: https://arabae.github.io/arabae.github.io/
+resume_site: https://github.com/arabae
 description: Speech/Speaker Recognition Study
 github_username: arabae
 github: https://github.com/arabae
